--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
               <img src="assets/images/food/bakeries.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/bakeries" class="tstbite-category-title">Bakeries/Cafes</a>
+              <a href="/bakeries" class="tstbite-category-title">Bakeries</a>
             </figcaption>
           </figure>
         </div>
