--- a/vegasbakeries.html
+++ b/vegasbakeries.html
@@ -43,11 +43,11 @@
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a  class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/bellagiocafe.png" class="rounded-circle" >
+              <img src="assets/images/food/cafegelato.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a  class="tstbite-category-title">Bellagio Cafe</a>
-              <p>Blueberry muffin</p>
+              <a  class="tstbite-category-title">Café Gelato</a>
+              <p>Blueberry muffin, stracciatella gelato</p>
             </figcaption>
           </figure>
         </div>
