--- a/other.html
+++ b/other.html
@@ -41,6 +41,16 @@
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
+            <a href="/crepes" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/palacinke.jpg" class="w-100" alt="Crepes">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/crepes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Crepes</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
             <a href="/pancakes" class="tstbite-animation rounded-6">
               <img src="assets/images/food/pancakes.jpg" class="w-100" alt="Pancakes">
             </a>
