--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/savory" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/gfdfv" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/lettucecupsicon.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/savory" class="tstbite-category-title">Savory</a>
+              <a href="/gfdfv" class="tstbite-category-title">GF/DF/V</a>
             </figcaption>
           </figure>
         </div>
@@ -184,23 +184,7 @@
         </div>
       </div>
     </section>
-
-    <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">GF, DF, V</h5>
-      <div class="row">
-        <div class="col-lg-2 col-md-4 col-4">
-          <figure class="my-3 text-center tstbite-card">
-            <a href="/gfdfv" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/gfdfvicon.jpg" class="rounded-circle" >
-            </a>
-            <figcaption class="mt-2">
-              <a href="/gfdfv" class="tstbite-category-title">Recipes</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-    </section>
-
+    
     <section class="tstbite-components my-4 my-md-5">
       <h5 class="py-3 mb-0">Favorite Spots</h5>
       <div class="row">
