--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <img src="assets/images/food/lettucecupsicon.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/gfdfv" class="tstbite-category-title">GF/DF/V</a>
+              <a href="/gfdfv" class="tstbite-category-title">GF, DF, V</a>
             </figcaption>
           </figure>
         </div>
