--- a/volcanosalmon.html
+++ b/volcanosalmon.html
@@ -57,7 +57,7 @@
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/tofu.jpg" class="w-100" >
+          <img src="assets/images/food/volcanosalmon.jpg" class="w-100" >
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
