--- a/volcanosalmon.html
+++ b/volcanosalmon.html
@@ -45,13 +45,13 @@
       </div>
       <div class="d-flex flex-wrap">
         <div class="my-2 me-4">
-          <small class="ps-1">Author: Cookie and Kate</small>
+          <small class="ps-1">Author: Moribyan</small>
         </div>
         <div class="my-2 me-4">
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
             <path d="M2,14.666a2,2,0,0,1-2-2V3.333a2,2,0,0,1,2-2H3.334V.667a.667.667,0,0,1,1.333,0v.667h4V.667A.667.667,0,0,1,10,.667v.667h1.333a2,2,0,0,1,2,2v9.334a2,2,0,0,1-2,2Zm-.667-2A.667.667,0,0,0,2,13.333h9.334A.667.667,0,0,0,12,12.667v-6H1.333ZM12,5.333v-2a.667.667,0,0,0-.667-.667H10v.667a.667.667,0,0,1-1.334,0V2.666h-4v.667a.667.667,0,1,1-1.333,0V2.666H2a.667.667,0,0,0-.667.667v2Z"/>
           </svg>
-          <small>January 15th, 2023</small>
+          <small>June 24th, 2023</small>
         </div>
       </div>
       <div class="blog-detail">
@@ -65,19 +65,19 @@
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
                 <small>Prep Time</small>
-                <span>15 minutes</span>
+                <span>10 minutes</span>
               </li>
               <li>
                 <small>Cook Time</small>
-                <span>25 minutes</span>
+                <span>20 minutes</span>
               </li>
               <li>
                 <small>Total Time</small>
-                <span>40 minutes</span>
+                <span>30 minutes</span>
               </li>
               <li>
                 <small>Servings</small>
-                <span>1
+                <span>2
                 </span>
               </li>
             </ul>
