--- a/volcanosalmon.html
+++ b/volcanosalmon.html
@@ -86,25 +86,52 @@
             <div class="mt-4 mt-md-5">
               <h6>Ingredients</h6>
               <div class="checklist pb-2">
+                <strong>Volcano Sauce</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1 block (12-15oz) organic extra-firm tofu</label>
+                  <label class="form-check-label" for="crackers">1/2 cup coconut sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tablespoon extra-virgin olive oil</label>
+                  <label class="form-check-label" for="unsalted">1/3 cup buffalo sauce</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tablespoon tamari</label>
+                  <label class="form-check-label" for="unsalted">1 tablespoon sriracha</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1 tablespoon cornstarch</label>
+                  <label class="form-check-label" for="crackers">1 tablespoon finely minced garlic</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">White rice</label>
+                  <label class="form-check-label" for="crackers">1 tablespoon raw honey</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="crackers">1 to 2 tablespoons EVOO or unsalted butter</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="crackers">1/2 to 1 teaspoon red pepper flakes to taste</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="crackers">1 tablespoon chopped parsley</label>
+                </div>
+                <strong>Salmon</strong>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="crackers">2 king salmon filets</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="crackers">Salt and pepper, to taste</label>
+                </div>
+                <strong>Rice</strong>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1 cup short grain white rice</label>
                 </div>
               </div>
             </div>
@@ -115,27 +142,15 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 400°F and line a large rimmed baking sheet with parchment paper to prevent the tofu from sticking. Set aside.
+                  Preheat oven to 400°F and line a large rimmed baking sheet with parchment paper. Pat dry the salmon filets with a paper towel. Place salmon filets on the baking sheet and into the oven for about 15 minutes (or until an internal temperature of 135°F-140°F).
                 </li>
                 <li>
                   <span>2</span>
-                  Drain the tofu using your palm to gently squeeze out some of the water.
+                  Over medium heat, add buffalo sauce, brown sugar, rice vinegar, sriracha, minced garlic, and honey to a pot or saucepan. Bring to a simmer to thicken into a glaze. Once it is thick, add the butter, red pepper flakes, and parsley. Mix to combine and then take off the heat and transfer to a large bowl. Set aside.
                 </li>
                 <li>
                   <span>3</span>
-                  Line a cutting board with paper towels. Slice the tofu into thirds lengthwise so you have 3 even slabs. Stack the slabs on top of each other and slice through them lengthwise to make 3 even columns, then slice across to make 5 even rows.
-                </li>
-                <li>
-                  <span>4</span>
-                  Arrange the tofu in an even layer on the paper towels. Add additional paper towels over the cubed tofu, then place something heavy on top (such as a small glass bowl) to help the tofu drain. Let the tofu rest for 30 minutes.
-                </li>
-                <li>
-                  <span>5</span>
-                  Transfer the pressed tofu to a medium mixing bowl and drizzle with the olive oil and tamari. Toss to combine. Sprinkle the starch over the tofu, and toss the tofu until the starch is evenly coated, so there are no powdery spots remaining.
-                </li>
-                <li>
-                  <span>6</span>
-                  Tip the bowl of tofu over onto your prepared baking sheet and arrange the tofu in an even layer. Bake for 25 to 30 minutes, turning the tofu over halfway, until the tofu is deeply golden on both sides. Serve with white rice.
+                  Take the salmon out of the oven and spoon volcano sauce on each filet. Garnish with green onions and sesame seeds, and serve with white rice.
                 </li>
               </ul>
             </div>
