--- a/gfdfv.html
+++ b/gfdfv.html
@@ -28,18 +28,18 @@
 
     <section class="tstbite-components my-4 my-md-5">
       <h5 class="py-3 mb-0">Gluten Free, Dairy Free, & Vegan (+ Refined Sugar Free!)</h5>
-<!--       <div class="row">
+      <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/pumpkincookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/pumpkincookies.jpg" class="w-100" alt="Pumpkin Cookies">
+            <a href="/volcanosalmon" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/volcanosalmon.jpg" class="w-100" alt="Volcano Salmon">
             </a>
             <figcaption class="mt-2">
-              <a href="/pumpkincookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Cookies</a>
+              <a href="/volcanosalmon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Volcano Salmon</a>
             </figcaption>
           </figure>
         </div>
-        <div class="col-md-4">
+<!--         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/chocolatechipcookies" class="tstbite-animation rounded-6">
               <img src="assets/images/food/chocolatechipcookies.jpg" class="w-100" alt="Chocolate Chip Cookies">
@@ -70,8 +70,8 @@
               <a href="/mnmcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Mini M&M Chocolate Chip Cookies</a>
             </figcaption>
           </figure>
-        </div>
-      </div> -->
+        </div> -->
+      </div>
     </section>
   </div>
 
