--- a/volcanosalmon.html
+++ b/volcanosalmon.html
@@ -152,6 +152,9 @@
                   <span>3</span>
                   Take the salmon out of the oven and spoon volcano sauce on each filet. Garnish with green onions and sesame seeds, and serve with white rice.
                 </li>
+                <li>
+                  <i>*Note: Salmon can be substituted with chicken or shrimp!</i>
+                </li>
               </ul>
             </div>
           </div>
