--- a/volcanosalmon.html
+++ b/volcanosalmon.html
@@ -119,6 +119,8 @@
                   <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="crackers">1 tablespoon chopped parsley</label>
                 </div>
+              </div>
+              <div class="checklist pb-2">
                 <strong>Salmon</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
@@ -128,11 +130,14 @@
                   <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="crackers">Salt and pepper, to taste</label>
                 </div>
+              </div>
+              <div class="checklist pb-2">
                 <strong>Rice</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">1 cup short grain white rice</label>
                 </div>
+              </div>
               </div>
             </div>
           </div>
