--- a/gfdfv.html
+++ b/gfdfv.html
@@ -40,17 +40,17 @@
             </figcaption>
           </figure>
         </div>
-<!--         <div class="col-md-4">
+         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/chocolatechipcookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/chocolatechipcookies.jpg" class="w-100" alt="Chocolate Chip Cookies">
+            <a href="/comingsoon" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Fine Herb Dressing">
             </a>
             <figcaption class="mt-2">
-              <a href="/chocolatechipcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pudding Chocolate Chip Cookies</a>
+              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fine Herb Dressing</a>
             </figcaption>
           </figure>
         </div>
-        <div class="col-md-4">
+       <!-- <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/chocolatechipcookiecake" class="tstbite-animation rounded-6">
               <img src="assets/images/food/cookiecake.jpg" class="w-100" alt="Chocolate Chip Cookie Cake">
