--- a/gfdfv.html
+++ b/gfdfv.html
@@ -50,18 +50,18 @@
             </figcaption>
           </figure>
         </div>
-       <!-- <div class="col-md-4">
+        <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/chocolatechipcookiecake" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/cookiecake.jpg" class="w-100" alt="Chocolate Chip Cookie Cake">
+            <a href="/comingsoon" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Chocolate Avocado Cookies">
             </a>
             <figcaption class="mt-2">
-              <a href="/chocolatechipcookiecake" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookie Cake</a>
+              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Avocado Cookies</a>
             </figcaption>
           </figure>
         </div>
       </div>
-      <div class="row">
+     <!-- <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/mnmcookies" class="tstbite-animation rounded-6">
