--- a/volcanosalmon.html
+++ b/volcanosalmon.html
@@ -119,6 +119,10 @@
                   <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="crackers">1 tablespoon chopped parsley</label>
                 </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="crackers">1/4 cup green onions</label>
+                </div>
               </div>
               <div class="checklist pb-2">
                 <strong>Salmon</strong>
@@ -150,7 +154,7 @@
                 </li>
                 <li>
                   <span>2</span>
-                  Over medium heat, add buffalo sauce, brown sugar, rice vinegar, sriracha, minced garlic, and honey to a pot or saucepan. Bring to a simmer to thicken into a glaze. Once it is thick, add the butter, red pepper flakes, and parsley. Mix to combine and then take off the heat and transfer to a large bowl. Set aside.
+                  Over medium heat, add buffalo sauce, brown sugar, rice vinegar, sriracha, minced garlic, and honey to a pot or saucepan. Bring to a simmer to thicken into a glaze. Once it is thick, add the EVOO or butter, red pepper flakes, and parsley. Mix to combine and then take off the heat. Add the green onions last, then transfer the mixture to a large bowl. Set aside.
                 </li>
                 <li>
                   <span>3</span>
