--- a/gfdfv.html
+++ b/gfdfv.html
@@ -43,6 +43,16 @@
          <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/comingsoon" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Pan Seared Chilean Sea Bass">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pan Seared Chilean Sea Bass</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/comingsoon" class="tstbite-animation rounded-6">
               <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Fine Herb Dressing">
             </a>
             <figcaption class="mt-2">
@@ -50,6 +60,8 @@
             </figcaption>
           </figure>
         </div>
+      </div>
+      <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/comingsoon" class="tstbite-animation rounded-6">
@@ -60,18 +72,6 @@
             </figcaption>
           </figure>
         </div>
-      </div>
-     <!-- <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/mnmcookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/mandmcookies.jpg" class="w-100" alt="Mini M&M Chocolate Chip Cookies">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/mnmcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Mini M&M Chocolate Chip Cookies</a>
-            </figcaption>
-          </figure>
-        </div> -->
       </div>
     </section>
   </div>
