--- a/gfdfv.html
+++ b/gfdfv.html
@@ -65,6 +65,26 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/comingsoon" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Kimchi Fried Rice">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Kimchi Fried Rice</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/comingsoon" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Dinner Rolls">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Dinner Rolls</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/comingsoon" class="tstbite-animation rounded-6">
               <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Chocolate Avocado Cookies">
             </a>
             <figcaption class="mt-2">
