--- a/gfdfv.html
+++ b/gfdfv.html
@@ -75,6 +75,16 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/comingsoon" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Bread Crumb Mustard Chicken">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Bread Crumb Mustard Chicken</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/comingsoon" class="tstbite-animation rounded-6">
               <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Dinner Rolls">
             </a>
             <figcaption class="mt-2">
@@ -82,6 +92,8 @@
             </figcaption>
           </figure>
         </div>
+      </div>
+        <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/comingsoon" class="tstbite-animation rounded-6">
