--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="assets/images/food/cinnamonroll.JPG" alt="First slide">
+          <img class="d-block w-100" src="assets/images/food/cinnamonroll.JPG" alt="Update">
         </div>
         <div class="carousel-item">
           <img class="d-block w-100" src="assets/images/food/breadsicon.jpeg" alt="Second slide">
