--- a/index.html
+++ b/index.html
@@ -23,6 +23,91 @@
             <path data-name="Icon Color" d="M1.033,14a1.2,1.2,0,0,1-.409-.069.947.947,0,0,1-.337-.207,1.2,1.2,0,0,1-.216-.333,1.046,1.046,0,0,1-.072-.4A1.072,1.072,0,0,1,.072,12.6a.892.892,0,0,1,.216-.321.947.947,0,0,1,.337-.207A1.2,1.2,0,0,1,1.033,12H22.967a1.206,1.206,0,0,1,.409.069.935.935,0,0,1,.336.207.9.9,0,0,1,.217.321,1.072,1.072,0,0,1,.072.391,1.046,1.046,0,0,1-.072.4,1.206,1.206,0,0,1-.217.333.935.935,0,0,1-.336.207,1.206,1.206,0,0,1-.409.069Zm0-6a1.2,1.2,0,0,1-.409-.069.934.934,0,0,1-.337-.207,1.189,1.189,0,0,1-.216-.333A1.046,1.046,0,0,1,0,6.989,1.068,1.068,0,0,1,.072,6.6a.9.9,0,0,1,.216-.322.947.947,0,0,1,.337-.207A1.2,1.2,0,0,1,1.033,6H22.967a1.206,1.206,0,0,1,.409.068.935.935,0,0,1,.336.207.9.9,0,0,1,.217.322A1.068,1.068,0,0,1,24,6.989a1.046,1.046,0,0,1-.072.4,1.193,1.193,0,0,1-.217.333.923.923,0,0,1-.336.207A1.206,1.206,0,0,1,22.967,8Zm0-6a1.2,1.2,0,0,1-.409-.068.947.947,0,0,1-.337-.207,1.193,1.193,0,0,1-.216-.334A1.039,1.039,0,0,1,0,.988,1.068,1.068,0,0,1,.072.6.892.892,0,0,1,.288.276.934.934,0,0,1,.625.069,1.2,1.2,0,0,1,1.033,0H22.967a1.206,1.206,0,0,1,.409.069.923.923,0,0,1,.336.207A.9.9,0,0,1,23.928.6,1.068,1.068,0,0,1,24,.988a1.039,1.039,0,0,1-.072.4,1.2,1.2,0,0,1-.217.334.935.935,0,0,1-.336.207A1.206,1.206,0,0,1,22.967,2Z" transform="translate(0 5)" fill="#000"></path>
           </svg>
         </button>
+
+        <!-- Nav Start -->
+        <div class="classynav">
+          <ul>
+              <li class="active"><a href="index.html">Home</a></li>
+              <li><a href="#">Pages</a>
+                  <ul class="dropdown">
+                      <li><a href="index.html">Home</a></li>
+                      <li><a href="about.html">About Us</a></li>
+                      <li><a href="blog-post.html">Blog Post</a></li>
+                      <li><a href="receipe-post.html">Receipe Post</a></li>
+                      <li><a href="contact.html">Contact</a></li>
+                      <li><a href="elements.html">Elements</a></li>
+                      <li><a href="#">Dropdown</a>
+                          <ul class="dropdown">
+                              <li><a href="index.html">Home</a></li>
+                              <li><a href="about.html">About Us</a></li>
+                              <li><a href="blog-post.html">Blog Post</a></li>
+                              <li><a href="receipe-post.html">Receipe Post</a></li>
+                              <li><a href="contact.html">Contact</a></li>
+                              <li><a href="elements.html">Elements</a></li>
+                              <li><a href="#">Dropdown</a>
+                                  <ul class="dropdown">
+                                      <li><a href="index.html">Home</a></li>
+                                      <li><a href="about.html">About Us</a></li>
+                                      <li><a href="blog-post.html">Blog Post</a></li>
+                                      <li><a href="receipe-post.html">Receipe Post</a></li>
+                                      <li><a href="contact.html">Contact</a></li>
+                                      <li><a href="elements.html">Elements</a></li>
+                                  </ul>
+                              </li>
+                          </ul>
+                      </li>
+                  </ul>
+              </li>
+              <li><a href="#">Mega Menu</a>
+                  <div class="megamenu">
+                      <ul class="single-mega cn-col-4">
+                          <li class="title">Catagory</li>
+                          <li><a href="index.html">Home</a></li>
+                          <li><a href="about.html">About Us</a></li>
+                          <li><a href="blog-post.html">Blog Post</a></li>
+                          <li><a href="receipe-post.html">Receipe Post</a></li>
+                          <li><a href="contact.html">Contact</a></li>
+                          <li><a href="elements.html">Elements</a></li>
+                      </ul>
+                      <ul class="single-mega cn-col-4">
+                          <li class="title">Catagory</li>
+                          <li><a href="index.html">Home</a></li>
+                          <li><a href="about.html">About Us</a></li>
+                          <li><a href="blog-post.html">Blog Post</a></li>
+                          <li><a href="receipe-post.html">Receipe Post</a></li>
+                          <li><a href="contact.html">Contact</a></li>
+                          <li><a href="elements.html">Elements</a></li>
+                      </ul>
+                      <ul class="single-mega cn-col-4">
+                          <li class="title">Catagory</li>
+                          <li><a href="index.html">Home</a></li>
+                          <li><a href="about.html">About Us</a></li>
+                          <li><a href="blog-post.html">Blog Post</a></li>
+                          <li><a href="receipe-post.html">Receipe Post</a></li>
+                          <li><a href="contact.html">Contact</a></li>
+                          <li><a href="elements.html">Elements</a></li>
+                      </ul>
+                      <div class="single-mega cn-col-4">
+                          <div class="receipe-slider owl-carousel">
+                              <a href="#"><img src="img/bg-img/bg1.jpg" alt=""></a>
+                              <a href="#"><img src="img/bg-img/bg6.jpg" alt=""></a>
+                          </div>
+                      </div>
+                  </div>
+              </li>
+              <li><a href="receipe-post.html">Receipies</a></li>
+              <li><a href="receipe-post.html">4 Vegans</a></li>
+              <li><a href="contact.html">Contact</a></li>
+          </ul>
+
+          <!-- Newsletter Form -->
+          <div class="search-btn">
+              <i class="fa fa-search" aria-hidden="true"></i>
+          </div>
+
+      </div>
+      <!-- Nav End -->
+
       </nav>
     </header>
 
