--- a/brownies.html
+++ b/brownies.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">2 tablespoons coconut sugar (substitute brown sugar)</label>
+                  <label class="form-check-label" for="crackers">2 tablespoons coconut sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
