--- a/brownies.html
+++ b/brownies.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2/3 cup almond butter</label>
+                  <label class="form-check-label" for="unsalted">2/3 cup almond butter (substitute coconut butter)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
